--- a/config/the_vault/gen/1.0/loot_tables/treasure_chest_50.json
+++ b/config/the_vault/gen/1.0/loot_tables/treasure_chest_50.json
@@ -8,6 +8,21 @@
       },
       "pool": [
         {
+          "weight": 600,
+          "item": {
+            "id": "the_vault:jewel",
+            "nbt": {
+              "the_vault:gear_roll_type_pool": "Unique",
+              "the_vault:gear_unique_pool": "woldsvaults:breaching_jewel"
+            },
+            "count": {
+              "type": "uniform",
+              "min": 1,
+              "max": 1
+            }
+          }
+        },
+        {
           "weight": 70,
           "pool": [
             {
@@ -689,6 +704,21 @@
           "weight": 4,
           "item": {
             "id": "the_vault:treasure_chest_scroll",
+            "count": {
+              "type": "uniform",
+              "min": 1,
+              "max": 1
+            }
+          }
+        },
+        {
+          "weight": 6,
+          "item": {
+            "id": "the_vault:jewel",
+            "nbt": {
+              "the_vault:gear_roll_type_pool": "Unique",
+              "the_vault:gear_unique_pool": "woldsvaults:breaching_jewel"
+            },
             "count": {
               "type": "uniform",
               "min": 1,
